--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: java
 jdk:
   - oraclejdk13
+deploy:
+  provider: heroku
+  api-key:
+    secure: $HEROKU_API_KEY
+  app: labaddressbook
 before_install:
   - chmod +x mvnw
 dist: trusty
