--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ jdk:
   - oraclejdk13
 deploy:
   provider: heroku
-  api-key:
-    secure: $HEROKU_API_KEY
+  api-key: $HEROKU_API_KEY
   app: labaddressbook
+  on:
+    branch: main
 before_install:
   - chmod +x mvnw
 dist: trusty
